style.css
html, body {
  margin: 0;
  height: 100%;
  background: #111;
  color: white;
  font-family: Arial, sans-serif;
}

body {
  overflow: hidden;
}

#setup {
  padding: 20px;
}

.hidden {
  display: none;
}

input,
button {
  padding: 10px;
  margin: 5px;
  border: none;
  border-radius: 8px;
  font-size: 16px;
}

button {
  cursor: pointer;
}

#chat {
  height: 100vh;
  display: flex;
  flex-direction: column;
}
#colorInput {
  padding: 0;
  width: 50px;
  height: 42px;
  border: none;
  background: none;
  cursor: pointer;
}

#messages {
  flex: 1;
  overflow-y: auto;
  padding: 10px;
  word-wrap: break-word;
  scrollbar-color: #555 #111; /* incase of firefox */
  scrollbar-width: thin;
}

#inputBar {
  display: flex;
  gap: 8px;
  padding: 10px;
  background: #222;
  border-top: 1px solid #333;
  box-sizing: border-box;
}

#messageInput {
  flex: 1;
  padding: 12px;
  background: #333;
  color: white;
  outline: none;
}

#sendBtn {
  padding: 12px 18px;
  background: #4a6cff;
  color: white;
}

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-track {
  background: #111;
}

::-webkit-scrollbar-thumb {
  background: #444;
  border-radius: 10px;
  border: 2px solid #111;
}

::-webkit-scrollbar-thumb:hover {
  background: #666;
}

